--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,175 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html{
+  scroll-behavior: smooth;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: 'Din';
+  src: url('/src/assets/fonts/D-DIN.otf') format('truetype');
+  font-style: normal;
+  font-weight: normal;
 }
+
+@font-face {
+  font-family: 'DinM';
+  src: url('/src/assets/fonts/DINM.ttf') format('truetype');
+  font-style: normal;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'DinBold';
+  src: url('/src/assets/fonts/D-DIN-Bold.otf') format('truetype');
+  font-style: normal;
+  font-weight: normal;
+}
+
+.font-dinbold{
+  font-family: DinBold, Arial, Helvetica, sans-serif;
+}
+
+.font-dinm{
+  font-family: DinM, Arial, Helvetica, sans-serif;
+}
+
+.border-effect::after{
+
+  content: '';
+  display:block;    
+  border-bottom: 2px white solid;
+  transform: scaleX(0);  
+  transition: transform 250ms ease-in-out;
+  transform-origin:  100% 50%;      
+  /* transform-origin:  0% 100%;        */
+  
+
+}
+
+.border-effect:hover:after { transform: scaleX(1); transform-origin:  0% 50%;}
+
+
+.arrow-scroll {
+  position: relative;
+  height: 4em;
+  
+}
+
+.arrow{
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 9px;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%) rotate(45deg);
+  cursor: pointer;
+}
+
+.arrow:nth-child(2){ animation: arrow1 2s ease-in-out infinite;}   
+  
+
+
+@keyframes arrow1 {
+  
+  100% {
+      opacity: 0;
+      top: 35%;
+  }
+}
+
+
+.hvr-sweep-to-right {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+.hvr-sweep-to-right:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: white;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transform-origin: 0 50%;
+  transform-origin: 0 50%;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.hvr-sweep-to-right:hover{
+  color: white;
+}
+.hvr-sweep-to-right:hover:before{
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
+
+/* TOP */
+.hvr-sweep-to-top {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+.hvr-sweep-to-top:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: white;
+  -webkit-transform: scaleY(0);
+  transform: scaleY(0);
+  -webkit-transform-origin: 50% 100%;
+  transform-origin: 50% 100%;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.hvr-sweep-to-top:hover, .hvr-sweep-to-top:focus, .hvr-sweep-to-top:active {
+  color: white;
+}
+.hvr-sweep-to-top:hover:before, .hvr-sweep-to-top:focus:before, .hvr-sweep-to-top:active:before {
+  -webkit-transform: scaleY(1);
+  transform: scaleY(1);
+}
+
+
+.bgs{
+  
+  background: 
+  linear-gradient(to right, rgba(255,0,0,0), black), 
+  url("assets/launch-img.png");
+  
+  background-size: cover;
+}
+
