--- a/src/index.css
+++ b/src/index.css
@@ -8,14 +8,14 @@ html{
 
 @font-face {
   font-family: 'DinM';
-  src: url('./src/assets/fonts/DINM.ttf') format('truetype');
+  src: url('/src/assets/fonts/DINM.ttf') format('truetype');
   font-style: normal;
   font-weight: normal;
 }
 
 @font-face {
   font-family: 'DinBold';
-  src: url('./src/assets/fonts/D-DIN-Bold.otf') format('truetype');
+  src: url('/src/assets/fonts/D-DIN-Bold.otf') format('truetype');
   font-style: normal;
   font-weight: normal;
 }
